cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/edge_urgent.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/edge_urgent.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------
  (1/1) Edge is urgent.
  ---------------------
   * In automaton "p":
     - edge e now;
       ^
